--- a/Anvil/Anvil.csproj
+++ b/Anvil/Anvil.csproj
@@ -43,6 +43,11 @@
       <None Remove="Resources\Fonts\Roboto-Regular.ttf" />
       <None Remove="Resources\Icons\Ratchet.jpg" />
       <None Remove="Resources\Icons\Ratchet.png" />
+      <None Remove="Resources\Themes\Purplii.json" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Include="Resources\Themes\Purplii.json" />
     </ItemGroup>
 
     <ItemGroup>
@@ -52,6 +57,11 @@
     <ItemGroup>
       <EmbeddedResource Include="Resources\Fonts\Roboto-Light.ttf" />
       <EmbeddedResource Include="Resources\Fonts\Roboto-Regular.ttf" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Serilog" Version="3.0.1" />
+      <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
     </ItemGroup>
 
     <ItemGroup>
