Base zone loading and display

--- a/Anvil/Anvil.csproj
+++ b/Anvil/Anvil.csproj
@@ -15,6 +15,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Anvil.IO\Anvil.IO.csproj" />
       <ProjectReference Include="..\TempImtoolSubModule\ImTool\ImTool.csproj" />
     </ItemGroup>
 
@@ -60,6 +61,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="Serilog" Version="3.0.1" />
       <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
     </ItemGroup>
